# KensMCP

./: .gitignore  LICENSE  README.md  blog-post-mcp-tools.md  pyproject.toml  requirements.txt
examples/: demo_client.py  test_tools.sh
src/: __init__.py  __main__.py  http_server.py  server.py
src/tools/: __init__.py
